# Docs2Synth

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CNAME  DEVELOPMENT.md  Dockerfile  Dockerfile.gpu  Dockerfile.mcp  LICENSE  MANIFEST.in  Makefile  README.md  config.example.yml  config.mcp.example.yml  config.yml  docker-compose.mcp.yml  docker-compose.yml  environment.yml  index.html  mkdocs.yml  pyproject.toml  requirements-cpu-minimal.txt  requirements-cpu.in  requirements-cpu.txt  requirements-dev.in  requirements-dev.txt  requirements-docling.txt  requirements-gpu.in  requirements-gpu.txt  requirements.txt  setup.bat  setup.sh  sitemap.xml  test.txt  verify_docling_available.py
.githooks/: pre-commit  pre-push
.github/workflows/: code-quality.yml  deploy-mcp.yml  docker-build.yml  docs.yml  publish.yml
api-reference/: index.html
docs/: api-reference.md  cli-reference.md  index.md  mcp-integration.md  video.md
docs/development/: dependency-management.md  docker-builds.md  pypi-publishing.md
docs/stylesheets/: extra.css
docs/workflow/: complete-workflow.md  document-processing.md  qa-generation.md  rag-path.md  retriever-training.md
docs2synth/: __init__.py  cli.py
docs2synth/agent/: __init__.py  base.py  factory.py  qa.py  wrapper.py
docs2synth/agent/providers/: __init__.py  anthropic.py  doubao.py  gemini.py  huggingface.py  ollama.py  openai.py  vllm.py
docs2synth/annotation/: __init__.py  annotation_state.py  data_manager.py  image_renderer.py  streamlit_app.py
docs2synth/cli/: __init__.py  __main__.py  cli_main.py  utils.py
docs2synth/cli/commands/: __init__.py  agent.py  annotation.py  datasets.py  integration.py  preprocess.py  qa.py  rag.py  retriever.py  verify.py
docs2synth/datasets/: __init__.py  downloader.py  parquet_loader.py
docs2synth/integration/: __init__.py  pipeline.py
docs2synth/mcp/: __init__.py  auth.py  cli.py  config.py  server.py
docs2synth/mcp/auth/: oauth_proxy.py  oidc_client.py
docs2synth/mcp/common/: __init__.py  document_index.py
docs2synth/mcp/prompts/: __init__.py  hello.py  help.py
docs2synth/mcp/resources/: __init__.py
docs2synth/mcp/static/: .gitkeep
docs2synth/mcp/tools/: __init__.py  active_config.py  dataset_info.py  fetch.py  list_datasets.py  search.py  specs.py
docs2synth/preprocess/: __init__.py  docling_proc.py  docling_processor.py  easyocr_proc.py  paddleocr.py  pdfplumber_proc.py  runner.py  schema.py
docs2synth/qa/: __init__.py  config.py  dataloaders.py  generator.py  qa_batch.py  strategies.py  verify_batch.py
docs2synth/qa/generators/: __init__.py  base.py  layout_aware.py  logical_aware.py  semantic.py
docs2synth/qa/verifiers/: __init__.py  base.py  correctness.py  factory.py  meaningful.py
docs2synth/rag/: __init__.py  base.py  embeddings.py  our_retriever.py  pipeline.py  strategies.py  streamlit_app.py  types.py  vector_store.py
docs2synth/retriever/: __init__.py  dataloaders.py  dataset.py  evaluation.py  inference.py  metrics.py  model.py  models.py  old.py  preprocess.py  train.py  training.py  validation.py
docs2synth/utils/: __init__.py  config.py  logging.py  pdf_images.py  text.py  timer.py
notebooks/agent/: agent_demo.ipynb
scripts/: annotate.sh  build-docker.sh  check.sh  run-checks.sh  verify_docling_available.py
search/: search_index.json
tests/: __init__.py  test_agent.py  test_agent_advanced.py  test_agent_factory.py  test_cli.py  test_config.py  test_datasets.py  test_docling.py  test_easyocr.py  test_imports.py  test_integration_pipeline.py  test_logging.py  test_mcp_basic.py  test_mcp_config_advanced.py  test_mcp_document_index.py  test_mcp_prompts.py  test_mcp_resources.py  test_mcp_server.py  test_mcp_tools.py  test_paddleocr.py  test_paddleocr_no_dep.py  test_pdfplumber.py  test_qa_verifiers.py  test_runner.py  test_schema.py  test_timer.py
tests/agent/: test_factory.py
tests/qa/: __init__.py  test_base_generator.py  test_base_verifier.py
tests/rag/: test_base.py  test_embeddings.py  test_pipeline.py  test_strategies.py  test_types.py  test_vector_store.py
tests/retriever/: __init__.py  test_dataset.py  test_metrics.py  test_model.py
tests/utils/: test_text.py
workflow/document-processing/: index.html
workflow/qa-generation/: index.html
workflow/rag-path/: index.html
workflow/retriever-training/: index.html
