[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Docs2Synth"
version = "0.1.0"
description = "A Python package for synthesizing and working with document data."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
]
authors = [{ name = "AI4WA" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AI4WA/Docs2Synth"
"Bug Tracker" = "https://github.com/AI4WA/Docs2Synth/issues"

[project.scripts]
docs2synth = "Docs2Synth.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black==24.8.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    # mkdocstrings will be enabled once modules are implemented
    # "mkdocstrings[python]>=0.24.0",
]

qa = [
    "openai>=1.0",
]

retriever = [
    "sentence-transformers>=0.6",
    "numpy>=1.22",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [".git", ".mypy_cache", ".tox", "build", "dist", ".eggs"]

# mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
