[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["docs2synth", "docs2synth.datasets", "docs2synth.qa", "docs2synth.retriever", "docs2synth.utils", "docs2synth.rag"]

[project]
name = "docs2synth"
version = "0.1.0"
description = "A Python package for synthesizing and working with document data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # CLI
    "click>=8.0",
    "pyyaml",
    # OCR and Document Processing
    "paddlepaddle>=3.2.0,<3.3.0",  # Allow patch updates (3.2.x)
    "paddleocr>=3.2.0,<3.4.0",  # Allow minor updates (3.2.x, 3.3.x)
    "shapely>=1.8",
    "scikit-image>=0.21",
    "easyocr>=1.7.0",
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",  # For PDF to image conversion in PaddleOCR
    # Data Processing
    "pandas>=1.5.0",
    "pillow",
    "tqdm>=4.65.0",
    # Agent & LLM providers
    "transformers>=4.30.0",
    "requests>=2.28.0",
    "openai>=1.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
    # Note: PyTorch should be installed separately based on CPU/GPU
    # See requirements-cpu.in or requirements-gpu.in
]
authors = [{ name = "AI4WA" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AI4WA/Docs2Synth"
"Bug Tracker" = "https://github.com/AI4WA/Docs2Synth/issues"

[project.scripts]
docs2synth = "docs2synth.cli:main"
docs2synth-mcp = "docs2synth.mcp.cli:main"

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    # Code Quality
    "black==24.8.0",
    "isort>=5.12",
    "flake8>=6.0",
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    # mkdocstrings will be enabled once modules are implemented
    # "mkdocstrings[python]>=0.24.0",
    # Data handling
    "pyarrow>=10.0.0",
    # Jupyter support
    "ipykernel>=7.0.0",
    "nbconvert>=7.0.0",
    "jupyter",
    # Additional dev dependencies
    "sentence-transformers>=0.6",
    "numpy>=1.22,<2.0",  # PaddlePaddle requires NumPy 1.x
    # MCP dependencies (required for MCP tests)
    "mcp>=1.20.0",
    "starlette>=0.27.0",
    "uvicorn>=0.27.0",
    "pyjwt[crypto]>=2.8.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
]

datasets = [
    "pandas>=1.5.0",
    "pyarrow>=10.0.0",
]

qa = [
    "openai>=1.0",
]

agent = [
    "openai>=1.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
    "requests>=2.28.0",
    "transformers>=4.30.0",
    # Note: torch should be installed from requirements-cpu.txt or requirements-gpu.txt
]

retriever = [
    "sentence-transformers>=0.6",
    "numpy>=1.22,<2.0",  # PaddlePaddle requires NumPy 1.x
    # Note: torch should be installed from requirements-cpu.txt or requirements-gpu.txt
]

mcp = [
    "mcp>=1.20.0",
    "starlette>=0.27.0",
    "uvicorn>=0.27.0",
    "pyjwt[crypto]>=2.8.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [".git", ".mypy_cache", ".tox", "build", "dist", ".eggs"]

# mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=docs2synth --cov-report=term-missing --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning:setuptools.sandbox",
    "ignore::UserWarning:paddle.utils.cpp_extension.extension_utils",
]

# coverage configuration
[tool.coverage.run]
source = ["docs2synth"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
