[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["docs2synth*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"docs2synth.mcp.static" = ["*"]

[project]
name = "docs2synth"
version = "0.1.2"
description = "A Python package for synthesizing and working with document data."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # CLI
    "click>=8.0",
    "pyyaml",
    # Data Processing
    "pandas>=1.5.0",
    "pillow>=10.0.0",
    "tqdm>=4.65.0",
    "requests>=2.28.0",
    "typing_extensions>=4.5",
]
authors = [{ name = "AI4WA" }]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AI4WA/Docs2Synth"
"Bug Tracker" = "https://github.com/AI4WA/Docs2Synth/issues"

[project.scripts]
docs2synth = "docs2synth.cli:main"
docs2synth-mcp = "docs2synth.mcp.cli:main"

[project.optional-dependencies]
# CPU installation - Full featured CPU version with MCP server
cpu = [
    # PyTorch CPU (from PyPI)
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    # ML/Transformers
    "transformers>=4.30.0",
    "sentence-transformers>=0.6",
    "faiss-cpu>=1.8.0",
    "numpy>=1.22,<2.0",  # PaddlePaddle requires NumPy 1.x
    # OCR and Document Processing
    "paddlepaddle>=3.2.0,<3.3.0",
    "paddleocr>=3.2.0,<3.4.0",
    "shapely>=1.8",
    "scikit-image>=0.21",
    "easyocr>=1.7.0",
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    "docling>=2.61.1",
    # LLM Providers
    "openai>=1.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
    # Annotation UI
    "streamlit>=1.51.0",
    "plotly>=6.4.0",
    "matplotlib>=3.10.7",
    # Data handling
    "pyarrow>=10.0.0",
    # MCP Server
    "mcp>=1.20.0",
    "starlette>=0.27.0",
    "uvicorn>=0.27.0",
    "pyjwt[crypto]>=2.8.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
]

# GPU installation - Full featured GPU version with MCP server
# Requires manual PyTorch GPU install first:
# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu128
# Then: pip install docs2synth[gpu]
gpu = [
    # GPU-specific packages (PyTorch GPU should be pre-installed)
    "vllm>=0.11.0",  # High-performance LLM inference (GPU only)
    "faiss-cpu>=1.8.0",  # Using CPU version (faiss-gpu lacks Python 3.11+ support)
    # ML/Transformers
    "transformers>=4.30.0",
    "sentence-transformers>=0.6",
    "numpy>=1.22,<2.0",
    # OCR and Document Processing
    "paddlepaddle>=3.2.0,<3.3.0",  # Using CPU version (paddlepaddle-gpu lacks 3.x support)
    "paddleocr>=3.2.0,<3.4.0",
    "shapely>=1.8",
    "scikit-image>=0.21",
    "easyocr>=1.7.0",
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    "docling>=2.61.1",
    # LLM Providers
    "openai>=1.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
    # Annotation UI
    "streamlit>=1.51.0",
    "plotly>=6.4.0",
    "matplotlib>=3.10.7",
    # Data handling
    "pyarrow>=10.0.0",
    # MCP Server
    "mcp>=1.20.0",
    "starlette>=0.27.0",
    "uvicorn>=0.27.0",
    "pyjwt[crypto]>=2.8.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
]

# Development tools
dev = [
    # Testing
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    # Code Quality
    "black==24.8.0",
    "isort>=5.12",
    "flake8>=6.0",
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    # Jupyter support
    "ipykernel>=7.0.0",
    "nbconvert>=7.0.0",
    "jupyter",
]

[dependency-groups]
dev = [
    "black[jupyter]>=24.8.0",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [".git", ".mypy_cache", ".tox", "build", "dist", ".eggs"]

# mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=docs2synth --cov-report=term-missing --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning:setuptools.sandbox",
    "ignore::UserWarning:paddle.utils.cpp_extension.extension_utils",
]

# coverage configuration
[tool.coverage.run]
source = ["docs2synth"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
